--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,4 @@
 markers =
     login_guest: tests for login guest
     user_add_to_basket: tests for adding product from product page by authorized user
+    need_review:
